--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "clean": "rm -rf dist/",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
